<resources>
    <string name="app_name">Green Step</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log in</string>
    <string name="welcome_nback">Welcome\nback</string>
    <string name="background_for_login_page">background for login page</string>
    <string name="app_logo">app logo</string>
    <string name="green_step">Green Step</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="name">Name</string>
    <string name="green_background">\n</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="reset">Reset</string>
    <string name="msg_climate_change">"Climate Change Is Accelerating, Bringing World 'Dangerously Close' to Irreversible Change"</string>
    <string name="lbl_with">with</string>
    <string name="lbl_matt_villano">Matt Villano</string>
    <string name="msg_sunday_22_oct">Sunday, 22 Oct 2023</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<!--    <string name="lbl_greenstep">GreenStep</string>-->
    <string name="lbl_go_vegan">Go Vegan</string>
    <string name="lbl_start">Start</string>
    <string name="msg_use_clean_energ">Use Clean Energy</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_complete">Complete</string>
    <string name="msg_silicone_bottle">Silicone Bottles</string>
    <string name="lbl_donate_clothes">Donate Clothes</string>
    <string name="lbl_alternatives">Alternatives</string>
    <string name="msg_avoid_plastic_b">Avoid Plastic Bottle</string>
    <string name="lbl_image">Image:</string>
    <string name="lbl_how_to">How To</string>
    <string name="lbl_edit">Edit</string>
    <string name="msg_source_referen">Source/ Reference:</string>
    <string name="msg_alternatives_fo">Alternatives for Plastic Bottles</string>
    <string name="msg_how_to_altern">How To &amp; Alternatives Update </string>
    <string name="lbl_reduce_waste">Reduce Waste</string>
    <string name="lbl_title">Title:</string>
    <string name="msg_alternatives_fo2">Alternatives for </string>
    <string name="lbl_alternatives_1">Alternatives 1</string>
    <string name="msg_your_actions_to">Your actions today can change tomorrow.</string>
    <string name="lbl_add_option">Add Option</string>
    <string name="lbl_avoid_shampoo">Avoid Shampoo</string>
    <string name="lbl_plastic_bottles">Plastic Bottles</string>
    <string name="msg_stainless_steel">Stainless Steel Water Bottles</string>
    <string name="lbl">*</string>
    <string name="msg_avoid_cleaning">Avoid Cleaning Product</string>
    <string name="lbl_alternatives2">Alternatives:</string>
    <string name="submit">Submit</string>
    <string name="title">Title:</string>
    <string name="image">Image:</string>
    <string name="caption">Caption</string>
    <string name="how_to">How To</string>
    <string name="alternatives">Alternatives</string>
    <string name="upload">Upload</string>
    <string name="challenge">Challenge</string>
    <string name="reward">Reward</string>
    <string name="events_news"><![CDATA[Events & News]]></string>
    <string name="educational_content">Educational Content</string>
    <string name="log_out">Log out</string>
    <string name="how_to_alternatives_update"><![CDATA[How To & Alternatives Update]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_option">Add Option</string>
    <string name="title2">TITLE</string>
    <string name="tip1">TIP1</string>
    <string-array name="user_types">
        <item>Admin</item>
        <item>Normal user</item>
    </string-array>
    <string-array name="challenge_types">
        <item>Select Your Challenge Here</item>
        <item>Carpooling</item>
        <item>Public Transportation</item>
        <item>Non-motorized Transportation</item>
        <item>Reduce</item>
        <item>Reuse</item>
        <item>Recycle</item>
        <item>Plastic Free</item>
        <item>Paperless</item>
        <item>Plant-based/ Meatless meals</item>
        <item>Energy Conservation</item>
        <item>Water Conservation</item>
        <item>Eco-friendly Shopping</item>
        <item>Community Cleanup</item>
        <item>Other</item>
    </string-array>
    <string-array name="frequency_types">
        <item>Frequency</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="select_challenge_type">Please select Challenge Type</string>
    <string name="select_frequency">Please select Frequency</string>
    <string name="challenge_added">Challenge added</string>
    <string name="error_adding_challenge">Error adding challenge</string>
</resources>