<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:id="@+id/dialogForgotPW">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/forgotTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password2"
            android:fontFamily="@font/quicksand_medium"
            android:padding="10dp"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:background="@color/light_green"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/password_icon" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_address"
            android:fontFamily="@font/quicksand_medium"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            app:layout_constraintBottom_toTopOf="@id/emailBox" />

        <EditText
            android:id="@+id/emailBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:maxLines="1"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:fontFamily="@font/quicksand_medium"
            android:background="@drawable/background_btn_cancel"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toStartOf="@id/button_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailBox"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:fontFamily="@font/quicksand_medium"
            android:background="@drawable/background_btn_reset"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:text="@string/reset"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintStart_toEndOf="@id/button_cancel"
            />




</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>