<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EduContentUploadFrame">

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/close_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"/>

    <FrameLayout
        android:id="@+id/titleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/uploadTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_alternatives_update"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="3dp"
            android:layout_gravity="center_horizontal"/>

        <View
            android:id="@+id/line"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@color/bluegray_300"
            android:layout_gravity="center|bottom"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/eduTabOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:id="@+id/tabHowTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to"
            android:textColor="@color/bluegray_300"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tabAlternatives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alternatives"
            android:textColor="@color/bluegray_300"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/eduUploadContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eduTabOption" />


</androidx.constraintlayout.widget.ConstraintLayout>